# algebraic_fuzzer

./: Cargo.toml  run.sh
src/: algebraic_fuzzer.rs  eip_2537_fuzzer.rs  lib.rs  traits.rs
