[package]
name = "algebraic_fuzzer"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth_pairings = {git = "https://github.com/matter-labs/eip1962.git", branch = "fuzzer"}
eth_pairings_go_2537 = {git = "https://github.com/shamatar/eip2537_go_bindings", features = ["adx_backend"]}
# eth_pairings = {path = "../eip1962", features = ["expose_inner", "eip_2537"] }
lain = "0.5"
derivative = "2.1"
once_cell = "1.*"
num-bigint = "0.3"
num-traits = "0.2"
ctrlc = "3.1"
hex = "0.4"
console = "0.12"

[[bin]]
name = "eip2537"
path = "bin/eip2537.rs" 
test = false
bench = false